helpdesk-agent/deploy/openshift/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-helpdesk-agent
  namespace: jira-messaging--runtime-ext
spec:
  selector:
    app: ai-helpdesk-agent
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ai-helpdesk-agent
  namespace: jira-messaging--runtime-ext
spec:
  to:
    kind: Service
    name: ai-helpdesk-agent
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ai-helpdesk-agent-ext-waf
  namespace: jira-messaging--runtime-ext
  labels:
    app: ai-helpdesk-agent
    shard: ext-waf
spec:
  host: ai-helpdesk-agent.apps.ext-waf.prod-stable-spoke1-dc-iad2.itup.redhat.com
  to:
    kind: Service
    name: ai-helpdesk-agent
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
